Ju fix orgs page descriptions (#29)
* Truncated orgs page desccriptions

* Remove no-wrap on org card description

* Set paragraph size on org card

--- a/src/scss/ge-styles.scss
+++ b/src/scss/ge-styles.scss
@@ -114,6 +114,10 @@ a:hover { text-decoration: none; color: black; }
 
 	p {
 		padding: 15px;
+    	overflow: scroll;
+    	text-overflow: ellipsis;
+    	resize: vertical;
+    	height: 115px;
 	}
 
 	img {
